----------
v3.0.4-git
----------

[gwr] Avoid including the owner name into the default share.


------
v3.0.3
------

[jan] Don't load all shares with requested permissions from the backend if
      $conf['share']['hidden'] is enabled.


------
v3.0.2
------

[jan] Add Ukrainian translation (Andriy Kopystyansky <anri@polynet.lviv.ua>).


------
v3.0.1
------

[jan] Fix reversed logic of displaying sub-task tree icons depending on the
      text direction (Bug #10033).
[jan] Fix encoding of non-ascii characters in parent task drop-down.
[mjr] Fix editing tasklists (Bug #9965).


----
v3.0
----

[jan] Fix application-specific permission checks (Bug #9786).
[mjr] Datatree share to SQL upgrade script refactored for Horde 4.
[jan] Fix creating new tasks through WebDAV (Bug #9675).
[jan] Move all executable scripts to bin/ and prefix with nag-.


--------
v3.0-RC1
--------

[jan] Update installation and upgrade instructions.
[gwr] Adapted the Kolab driver to Horde 4.


----------
v3.0-BETA1
----------

[mjr] Fix saving tasks via PUT method.
[mjr] Fix deleting task lists.
[mjr] Fix hiding the External prefs group (Bug #9643).


-----------
v3.0-ALPHA1
-----------

[jan] Provide default configuration files instead of .dist versions.
[jan] Send alarm notifications with HTML part and convert to Horde_View.
[jan] Default task lists no longer have the user name as the ID.
[jan] Create a default task list if the user doesn't own any yet.
[jan] Add start date to possible colums in task list (Joel Smith
      <js-horde@jk1.net>, Request #9083).
[jan] Add system task lists (Request #2059).
[jan] Set colors per task list (Request #7480).
[cjh] Quick Add support: there is a javascript UI element for quickly adding
      tasks, and an API method (tasks/quickAdd) that provides the same
      functionality.
[jan] Add individual notification methods for single tasks (Alfonso Marín
      Marín <almarin@um.es>).


------
v2.3.7
------
