@@ -28,6 +28,7 @@
  </stability>
  <license uri="http://www.gnu.org/licenses/gpl.html">GPL</license>
  <notes>
+* [gwr] Fix Kolab object attribute handling for tasks.
 * [gwr] Avoid including the owner name into the default share.
  </notes>
  <contents>
@@ -1036,6 +1037,7 @@
    <date>2011-08-31</date>
    <license uri="http://www.gnu.org/licenses/gpl.html">GPL</license>
    <notes>
+* [gwr] Fix Kolab object attribute handling for tasks.
 * [gwr] Avoid including the owner name into the default share.
    </notes>
   </release>
