@@ -2,6 +2,7 @@
 v3.0.4-git
 ----------
 
+[gwr] Fix Kolab object attribute handling for tasks.
 [gwr] Avoid including the owner name into the default share.
 
 
